--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="hello_pepper">Hello Pepper</string>
     <string name="how_are_you">How are you?</string>
     <string name="what_are_you_doing">What are you doing?</string>
+    <string name="someone_here">Tiens voilà quelqu\'un</string>
 </resources>
