--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">RobotSDK</string>
+    <string name="scenario_activity">Scenario Activity</string>
+    <string name="test_activity">Test Activity</string>
     <string name="hello_pepper">Hello Pepper</string>
     <string name="how_are_you">How are you?</string>
     <string name="what_are_you_doing">What are you doing?</string>
